# pcla-wrapper

./: .dockerignore  .gitmodules  Dockerfile  README.md  carla_server.sh  config_example.yaml  entrypoint.sh  justfile  pcla_config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
PCLA-wrapper/: PCLA_agent.py
docs/: README.md  agents.md  configuration.md  deployment.md  lifecycle.md  troubleshooting.md
pcla_wrapper/: __init__.py  lifecycle.py  pcla_av.py  server.py
scripts/: download_pcla_pretrained.sh  validate_pcla_pretrained.py
tests/: __init__.py  test_smoke.py
